# renderpop_server

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 20260720_0001_initial_schema.py  20260721_0001_credits_membership_generation.py  20260721_0002_showcase_items.py  20260721_0003_showcase_storage_key.py  20260722_0001_generation_models_video.py  20260723_0001_creation_sessions.py  20260723_0002_split_legacy_creation_sessions.py  20260724_0001_showcase_width_height.py  20260724_0002_dance_templates.py  20260724_0003_add_priority_to_generation_tasks.py
app/: __init__.py  main.py
app/api/: router.py
app/core/: commerce.py  config.py  db.py  deps.py  errors.py  redis.py  redis_keys.py
app/models/: __init__.py  anonymous_visitor.py  asset.py  base.py  creation_session.py  credit.py  daily_usage.py  dance_template.py  entitlement.py  enums.py  generation_job.py  generation_model.py  generation_task.py  identity.py  order.py  payment_event.py  product.py  refund.py  session.py  showcase.py  (+4 more)
docs/: HANDOFF.md  RenderPop_Backend_PRD_v1.0.md  dance.md  fast_api.md  image_to_image_free.md  image_to_image_pro.md  pro_api.md
scripts/: backfill_showcase_dimensions.py  reset_active_tasks.py  reset_sessions.py  seed_dance_templates.py  seed_generation_models.py  seed_products.py  seed_showcase.py
tests/: test_auth_service.py  test_credit_ledger.py  test_dance_templates.py  test_generation_dispatcher.py  test_health_live.py  test_video_pricing.py
(+56 files in other folders)
